kubernetes Files/Generic K8s Files/hold-core.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hold-core
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: hold-core
    spec:
      containers:
      - name: holdk8s
        image: micdoher/hold:pandasadd1

        imagePullPolicy: "IfNotPresent"

        # command: [ "/bin/bash", "-c", "--" ]
        # args: [ "while true; do sleep 30; done;" ]

        ports:
          - containerPort: 5000
      #
      # command: [ "/bin/bash", "-c", "--" ]
      # args: [ "while true; do sleep 30; done;" ]
