kubernetes Files/Generic K8s Files/jupyter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-notebook
  labels:
    app: jupyter-notebook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter-notebook
  template:
    metadata:
      labels:
        app: jupyter-notebook
    spec:
      containers:
      - name: minimal-notebook
        image: jupyter/tensorflow-notebook:latest
        securityContext:
          runAsUser: 0
        ports:
        - containerPort: 8888
