kubernetes Files/Generic K8s Files/hold-core-svc-with-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: hold-core-svc-with-ingress
  labels:
    app: hold-core
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: hold-core
