kubernetes Files/Generic K8s Files/hold-core-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hold-core-svc
  labels:
    app: hold-core
spec:
  type: NodePort
  ports:
  - port: 5000
    nodePort: 30001
    protocol: TCP
  selector:
    app: hold-core
