kubernetes Files/Generic K8s Files/hold-pg-tools-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hold-pg-tools-svc
  labels:
    app: hold-pg-tools-svc
spec:
  type: NodePort
  ports:
  - port: 5432
    nodePort: 30003
    protocol: TCP
  selector:
    app: hold-pg-tools
