kubernetes Files/Generic K8s Files/hold-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hold-ingress
spec:
  backend:
    serviceName: hold-core-svc
    servicePort: 30001
